#figma design completed

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2134,7 +2134,7 @@ label {
 }
 
 .cs_google_map {
-    height: 530px;
+    height: 800px;
 }
 
 .cs_google_map iframe {
@@ -2142,7 +2142,6 @@ label {
     display: block;
     border: none;
     width: 100%;
-    filter: grayscale(100%) invert(90%) contrast(120%);
 }
 
 .cs_google_map.cs_type1 {
@@ -3584,7 +3583,8 @@ label {
 }
 
 .cs_site_branding img {
-    max-height: 45px;
+    max-height: 80px;
+    max-width: 80px;
 }
 
 @media screen and (min-width: 1200px) {
@@ -4021,7 +4021,8 @@ label {
         margin-right: 0;
     }
     .cs_site_branding img {
-        max-height: 32px;
+        max-height: 80px;
+        max-width: 80px;
     }
     .cs_site_header.cs_style1 .cs_btn span {
         display: none;
