--- a/public/assets/sass/default/_color_variable.scss
+++ b/public/assets/sass/default/_color_variable.scss
@@ -4,22 +4,22 @@
 
 $white: #fff;
 $black: #000;
-$primary: #101010;
+$primary: #01112F;
 $secondary: #454545;
 $ternary: #999696;
 $border: #c1c1c1;
 $gray: #181818;
 $hrcOlor: #d9d9d9;
 $cr_banner: #f4f4f4;
-$accent: #ff6b00;
+$accent: #2E5ACE;
 $gray_sc: #565656;
 :root {
     --body-font-family: "Kanit", sans-serif;
     --heading-font-family: "Inter Tight", sans-serif;
-    --accent-color: #ff6b00;
+    --accent-color: #2E5ACE;
     --body-color: #454545;
-    --heading-color: #101010;
-    --primary-color: #101010;
+    --heading-color: #01112F;
+    --primary-color: #01112F;
     --cr_banner-color: #f4f4f4;
     --border-color: #c1c1c1;
     --common-color-white: #ffffff;
@@ -30,7 +30,7 @@ $gray_sc: #565656;
 .dark {
     --drak-color: #181818;
     --cr_banner-color: #181818;
-    --accent-color: #ff6b00;
+    --accent-color: #2E5ACE;
     --body-color: #e0e0e0;
     --heading-color: #ffffff;
     --primary-color: #ffffff;
