--- a/public/assets/sass/shortcode/_workprocess.scss
+++ b/public/assets/sass/shortcode/_workprocess.scss
@@ -36,14 +36,14 @@
         .cs_work_style_1 {
           width: 15px;
           height: 15px;
-          background: #ff6b00;
+          background: #2E5ACE;
           border-radius: 50%;
         }
         .cs_work_style_2 {
           width: 30px;
           height: 1px;
           transform: rotate(90deg);
-          background: #ff6b00;
+          background: #2E5ACE;
           margin-left: -7px;
         }
       }
