background color updated

--- a/public/assets/sass/common/_general.scss
+++ b/public/assets/sass/common/_general.scss
@@ -344,7 +344,7 @@ hr {
 
 .cs_primary_bg,
 .cs_primary_bg_hover:hover {
-    background-color: $primary;
+    background-color: #1E2251;
 }
 
 .cs_gradient_bg_1 {
