--- a/public/assets/sass/style.css
+++ b/public/assets/sass/style.css
@@ -953,7 +953,7 @@ hr {
 
 .cs_primary_bg,
 .cs_primary_bg_hover:hover {
-  background-color: #101010;
+  background-color: #1E2251;
 }
 
 .cs_gradient_bg_1 {
