--- a/public/assets/sass/default/_color_variable.scss
+++ b/public/assets/sass/default/_color_variable.scss
@@ -11,7 +11,7 @@ $border: #c1c1c1;
 $gray: #181818;
 $hrcOlor: #d9d9d9;
 $cr_banner: #f4f4f4;
-$accent: #2E5ACE;
+$accent: #8C2CF4;
 $gray_sc: #565656;
 :root {
     --body-font-family: "Kanit", sans-serif;
