scroll to top arrow changed to left

--- a/public/assets/sass/common/_general.scss
+++ b/public/assets/sass/common/_general.scss
@@ -1546,7 +1546,7 @@ label {
 .cs_scrollup {
     position: fixed;
     bottom: -60px;
-    right: 40px;
+    left: 40px;
     color: #fff;
     padding: 5px;
     height: 50px;
