--- a/src/components/sticky/Sticky.module.css
+++ b/src/components/sticky/Sticky.module.css
@@ -24,7 +24,7 @@
 
   width: 50px; /* Adjust the icon size */
   height: 50px; /* Adjust the icon size */
-  background-color: #069a38; /* Adjust the background color */
+  background-color: #000; /* Adjust the background color */
 
   border-radius: 50%;
   text-align: center;
