--- a/public/assets/sass/default/_color_variable.scss
+++ b/public/assets/sass/default/_color_variable.scss
@@ -1,6 +1,11 @@
 /*--------------------------------------------------------------
 1. Basic Color Variable
 ----------------------------------------------------------------*/
+// @tailwind base;
+// @tailwind components;
+// @tailwind utilities;
+
+
 
 $white: #fff;
 $black: #000;
