--- a/public/assets/sass/style.scss
+++ b/public/assets/sass/style.scss
@@ -45,6 +45,9 @@
 /*--------------------------------------------------------------
 1. Basic Color Variable
 ----------------------------------------------------------------*/
+// @tailwind base;
+// @tailwind components;
+// @tailwind utilities;
 
 @import "default/color_variable";
 @import "default/typography";
