--- a/src/components/sticky/Sticky.module.css
+++ b/src/components/sticky/Sticky.module.css
@@ -2,7 +2,7 @@
 
 .circleMenu {
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
   list-style: none;
   justify-content: center;
   align-items:center;
