--- a/public/assets/sass/default/_color_variable.scss
+++ b/public/assets/sass/default/_color_variable.scss
@@ -1,9 +1,9 @@
 /*--------------------------------------------------------------
 1. Basic Color Variable
 ----------------------------------------------------------------*/
-// @tailwind base;
-// @tailwind components;
-// @tailwind utilities;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 
 
