--- a/public/assets/sass/style.scss
+++ b/public/assets/sass/style.scss
@@ -1,6 +1,6 @@
 /* 
 |......................................................................
-| Template Name: Vixan
+| Template Name: Xyvin
 | Author: Thememarch
 | Version: 1.0.0
 |--------------------------------------------------------------------------
